[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Ann Lyapunova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"

[tool.mypy]
line-length = 119
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line-length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
